completed counter app

--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
         <div class="counter">
             <p id="count">0</p>
             <div class="buttons">
-                <button id="sub"><i class="fa fa-minus"></i></button>
-                <button id="reset">Reset</button>
-                <button id="add"><i class="fa fa-plus"></i></button>
+                <button class="sub"><i class="fa fa-minus"></i></button>
+                <button class="reset">Reset</button>
+                <button class="add"><i class="fa fa-plus"></i></button>
             </div>
         </div>
     </div>
+
+    <script src="./js/script.js"></script>
 </body>
 </html>
